2002-10-02  Eric Blake  <ebb9@email.byu.edu>

	* src/bytecode.cpp (EmitConditionalExpression): Fix verifyerror in
	non-boolean ?: expressions - bug 3311.

2002-09-27  Chris Abbey  <jikes@cabbey.net>

	* 1.17 release.

2002-09-25  Andrew M. Inggs  <aminggs@yahoo.co.uk>

	* src/m4/ac_try_encoding.m4: Use positive return values to
	avoid a bug on MSYS (Mingw native build system) where
	negative return values are seen as 0 at the shell level.

	* configure: regen (by cabbey)
	
	* src/stream.cpp (DecodeNextCharacter): If byte-swapping is
	needed, swap bytes in var next and not those pointed to by
	chp (since chp is modified by calls to iconv).

2002-09-13  Alan Donovan  <adonovan@lcs.mit.edu>

	* src/symbol.cpp (ReadDirectory): Ignore unreadable files (such as
	broken links) - bug 3207.

2002-09-11  Eric Blake  <ebb9@email.byu.edu>

	* src/double.cpp (IEEEfloat(LongInt)): Fix bug in (float)long -
	bug 3272.

2002-09-11  Eric Blake  <ebb9@email.byu.edu>

	* src/bytecode.h:
	* src/bytecode.cpp (InitializeArray, EmitArrayCreationExpression):
	Allow for discarded creation in instanceof - bug 3267.
	(EmitBranchIfExpression, EmitConditionalExpression): Further
	optimizations of ?:, including a fix for VerifyError - bug 3271.
	(EmitCastExpression, StripNops): Elide further unnecessary
	widening casts.
	* src/decl.cpp (CheckMethodOverride): More covariance.
	* src/error.h (InClone): New method.
	* src/expr.cpp (GetAnonymousType): In context of a clone, do not
	process anonymous classes - bug 3273.
	(CanMethodInvocationConvert, CanAssignmentConvertReference),
	(CanCastConvert): Simplify type comparison checks.
	* src/symbol.h (IsSubtype): New method.

2002-09-09  Eric Blake  <ebb9@email.byu.edu>

	General type-handling improvements, including bug 413, 426:
	* src/decl.cpp (ProcessTypeNames): Allow java.java in the unnamed
	package, which does not have subpackages.
	(FindTypeInShadow): Find only accessible types.
	(FindNestedType): Return only accessible types, without error if